Add EmitCompilerGeneratedFiles: false to the project file
- Prevent generated files from being included in compilation output

Along with IncludeBuildOutput: false, this ensures:

- The generator runs in each consuming project
- The generated code is only visible to that specific project's compilation
- The generated code does NOT leak through to other projects via project references

--- a/src/Mediocr/Mediocr.csproj
+++ b/src/Mediocr/Mediocr.csproj
@@ -24,6 +24,9 @@
         <IncludeBuildOutput>false</IncludeBuildOutput>
         <DevelopmentDependency>true</DevelopmentDependency>
 
+        <!-- Prevent generated files from being included in compilation output -->
+        <EmitCompilerGeneratedFiles>false</EmitCompilerGeneratedFiles>
+
         <!-- Source Link -->
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
