--- a/src/Mediocr.Interfaces/Mediocr.Interfaces.csproj
+++ b/src/Mediocr.Interfaces/Mediocr.Interfaces.csproj
@@ -5,6 +5,19 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <LangVersion>14</LangVersion>
+        
+        <!-- NuGet Package Metadata -->
+        <PackageId>Mediocr.Interfaces</PackageId>
+        <Title>Mediocr Mediator Interfaces</Title>
+        <Description>Interfaces for Mediocr</Description>
+        <Authors>Matthew Chudleigh</Authors>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/MatthewChudleigh/Mediocr</PackageProjectUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Include="../../README.md" Pack="true" PackagePath="/" Condition="Exists('../../README.md')" />
+    </ItemGroup>
 </Project>
